Fix UI height issues on mobile devices
Fixes https://github.com/airdcpp-web/airdcpp-webclient/issues/483

--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,7 @@ section#container-main,
 #authenticated-app,
 .pusher,
 .ui.site-content {
-  height: 100vh;
+  height: 100dvh;
 }
 
 .ui.checkbox.floating {
